--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
+    "react-scroll": "^1.7.14",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
